# JustEatLinker

./: .gitignore  JustEatLinker.py  Makefile  build.ps1  constants.py  errors.py  just_eat.py  main.py  oauth.py  pyproject.toml  requirements.txt
.github/workflows/: push_build.yml
translations/: languages.json  translation_de.ts  translation_es.ts  translation_it.ts
