[project]
name = "JustEatLinker"

[tool.pyside6-project]
files = [
    "JustEatLinker.py",
    "just_eat.py",
    "oauth.py",
    "./translations/translation_de.ts",
    "./translations/translation_es.ts",
    "./translations/translation_it.ts",
    # Example language file: "./translations/translation_xx[_XX].ts"
]